@@ -1090,6 +1090,8 @@ changes in sbcl-0.7.3 relative to sbcl-0.7.2:
     future:) Brian Spilsbury has produced a Unicode-enabled variant of
     sbcl-0.7.0, available as a patch against sbcl-0.7.0 at
       <http://designix.com.au/brian/SBCL/sbcl-0.7.0-unicode.p0.gz>.
+  * Bugfix to GET-DISPATCH-MACRO-CHAR, now returning NIL for undefined
+    dispatch macro character combinations (thanks to Alexey Dejenka)
 
 planned incompatible changes in 0.7.x:
 * When the profiling interface settles down, maybe in 0.7.x, maybe
